--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^9.0.4",
     "immer": "^9.0.21",
     "json-server": "^0.17.2",
+    "particles.js": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
@@ -55,6 +56,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
+    "gh-pages": "^5.0.0",
     "tailwindcss": "^3.2.7"
   }
 }
